# termai

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
src/: main.rs  program.rs
src/ai/: ask.rs  chat.rs  explain.rs  mod.rs  suggest.rs  utils.rs
src/args/: mod.rs  subcommand.rs
src/client/: agent.rs  ai_client.rs  client.rs  constants.rs  enums.rs  finish_reason.rs  mod.rs  models.rs  openai.rs  streaming.rs  traits.rs
src/client/agents/: mod.rs  multi_turn_agent.rs  streaming_multi_turn_agent.rs  util.rs
src/client/models/: anthropic.rs  mod.rs  openai.rs  shared.rs
src/config/: mod.rs
src/editor/: event_handlers.rs  hinter.rs  mod.rs
src/mcp/: mod.rs
src/provider/: llm_models.rs  mod.rs
src/utils/: changelog.rs  commands.rs  console.rs  encryption.rs  enums.rs  mod.rs  shell.rs  term_tools.rs
