[package]
name = "termai"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "AI assistant for the terminal"
homepage = "https://github.com/JazzyMcJazz/termai"
repository = "https://github.com/JazzyMcJazz/termai"
readme = "README.md"
keywords = ["ai", "assistant", "terminal", "chatbot", "cli"]
categories = ["command-line-utilities"]

[package.metadata]
release_date = "2025-04-20"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
async-stream = "0.3.6"
base64 = "0.22.1"
clap = "4.5.35"
confy = "0.6.1"
console = "0.15.11"
ctrlc = "3.4.6"
dialoguer = "0.11.0"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
keyring = { version = "3.6.2", features = ["sync-secret-service", "apple-native", "windows-native"] }
mcp-core = { version = "0.1.43", features = ["sse"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
# rig-core = { version = "0.11.1", features = ["mcp"] }
# rig-core = { path = "../rig/rig-core", features = ["mcp"] }
rig-core = { git = "https://github.com/JazzyMcJazz/rig.git", branch = "dev", features = ["mcp"] }
rustyline = "15.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.34.2"
termimad = "0.31.2"
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = "symbols"
